syntax = "proto3";
package proto.hello.v1;
option go_package = "github.com/4x2Hach1/learning/grpc-go/api/gen/proto/hello/v1;hellov1";

message HelloRequest {
    string name = 1;
};
message HelloResponse {
    string message = 1;
}

service HelloService {
    rpc Hello(HelloRequest) returns(HelloResponse);
}

